# contract-demo-state

./: .env.local  .gitignore  .gitpod.yml  .travis.yml  .yarnrc  LICENSE  README.md  package.json
.next/: trace
.next/server/: _error.js
.next/server/pages/: _app.js  _document.js  _error.js  index.js
.next/static/chunks/: _error.js  webpack.js
.next/static/webpack/: webpack.43c518f113ae2799.hot-update.js  webpack.7814c45dc4eb24ec.hot-update.js
contract/: .gitignore  Cargo.toml  do-build.sh  do-tests.sh
contract/.cargo/: config
contract/app/: .gitignore  Cargo.toml  build.sh  test.sh
contract/app-nft/: .gitignore  Cargo.toml  build.sh  test.sh
contract/app-nft/src/: airdrop.rs  internal.rs  lib.rs  mint.rs  query.rs  series.rs  upgrade.rs
contract/app-nft/tests/sim/: main.rs
contract/app-wallet-creation/: .gitignore  Cargo.toml  build.sh  test.sh
contract/app-wallet-creation/src/: lib.rs
contract/app-wallet-creation/tests/: tests.rs
contract/app/res/: status_message.wasm
contract/app/src/: lib.rs  permissions.rs
contract/app/tests/: test_log_analytics.rs  tests.rs
contract/src/: lib.rs
res/: app.wasm  app_nft.wasm  app_wallet_creation.wasm
src/: config.js  full-config.js  global.scss
src/components/Button/: Button.module.sass  Button.tsx
src/components/OutlinedInput/: OutlinedInput.module.sass  OutlinedInput.tsx
src/pages/: _app.tsx  index.tsx
src/pages/analytics/: AnalyticsForm.jsx
src/pages/api/: hello.tsx
src/stores/: AuthStore.ts  Storage.ts
src/utils/: Colors.tsx
stores/: Account.ts  AuthStore.ts  Config.ts
(+13 files in other folders)
