[package]
name = "app-nft"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.1.1"

[dev-dependencies]
near-sdk-sim = "3.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
