[package]
name = "app-wallet-creation"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "4.0.0-pre.2"

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.2"

[lib]
crate-type = ["cdylib", "rlib"]
